# cosmixos

./: .gitignore  .mcp.json  CLAUDE.md  Cargo.toml  _notes.md  cosmix-implementation-plan.md
_doc/: 2026-03-06-appmesh-refactor-plan.md  2026-03-06-arexx-lineage.md  2026-03-06-cosmix-strategy.md  2026-03-06-existing-assets-inventory.md  2026-03-07-daemon-architecture.md  2026-03-07-layered-architecture.md  2026-03-07-tree-widget-research.md  2026-03-07-virtual-keyboard-osk.md  2026-03-08-arexx-adoption-plan.md  2026-03-08-arexx-deep-dive.md  2026-03-08-pure-rust-stack-vision.md  2026-03-09-amp-v04-cosmix-specification.md  2026-03-09-axum-migration-plan.md  2026-03-09-gcwg-php-removal-plan.md  2026-03-09-phase7-mesh-integration-plan.md  2026-03-10-cosmix-jmap-implementation-plan.md  2026-03-10-cosmix-os-vision.md  2026-03-10-cosmix-systemd-strategy.md  2026-03-10-port-native-vs-port-wrapper.md  2026-03-10-self-improving-build-loop.md  2026-03-14-build-and-distribution.md  2026-03-14-cosmixos-alpine-ct-setup.md  2026-03-14-cosmixos-guiding-principles.md  2026-03-14-openclaw-analysis.md  2026-03-14-zeroclaw-analysis.md  2026-03-15-innernet-absorption-plan.md  2026-03-16-cosmix-organic-architecture.md  2026-03-17-cosmixos-first-light.md  2026-03-17-proxmox-usb-desktop-plan.md  2026-03-18-cosmixos-daily-driver-setup.md  2026-03-26-appmesh-ecosystem-roadmap.md  2026-03-26-network-topology.md  2026-03-29-arexx-deep-dive.md  (+4 more)
crates/cosmix-backup/: Cargo.toml
crates/cosmix-backup/src/: main.rs
crates/cosmix-client/: Cargo.toml
crates/cosmix-client/examples/: test_hub.rs  test_phase2.rs
crates/cosmix-client/src/: lib.rs
crates/cosmix-dialog/: Cargo.toml
crates/cosmix-dialog/src/: main.rs
crates/cosmix-edit/: Cargo.toml
crates/cosmix-edit/src/: main.rs
crates/cosmix-embed/: Cargo.toml
crates/cosmix-embed/src/: main.rs
crates/cosmix-files/: Cargo.toml
crates/cosmix-files/src/: main.rs
crates/cosmix-hub/: Cargo.toml
crates/cosmix-hub/src/: main.rs
crates/cosmix-jmap/: Cargo.toml
crates/cosmix-jmap/migrations/: 001_initial.sql  002_smtp_queue.sql  003_calendars_contacts.sql  003_spam_filter.sql
crates/cosmix-jmap/src/: config.rs  filter.rs  main.rs
crates/cosmix-jmap/src/auth/: basic.rs  mod.rs
crates/cosmix-jmap/src/db/: account.rs  blob.rs  calendar.rs  changelog.rs  contact.rs  email.rs  mailbox.rs  mod.rs  thread.rs
crates/cosmix-jmap/src/jmap/: calendar.rs  contact.rs  email.rs  mailbox.rs  mod.rs  submission.rs  types.rs
crates/cosmix-jmap/src/smtp/: bounce.rs  delivery.rs  inbound.rs  mod.rs  queue.rs  session.rs
crates/cosmix-lib-daemon/: Cargo.toml
crates/cosmix-lib-daemon/src/: lib.rs
crates/cosmix-lib-script/: Cargo.toml
crates/cosmix-lib-script/src/: discovery.rs  executor.rs  lib.rs  menu.rs  mix_runtime.rs  types.rs
crates/cosmix-lib-ui/: Cargo.toml
crates/cosmix-lib-ui/src/: app_init.rs  lib.rs
crates/cosmix-lib-ui/src/components/: error_banner.rs  mod.rs  status_bar.rs  table_header.rs  ui_registry.rs
crates/cosmix-lib-ui/src/menu/: component.rs  mod.rs  types.rs
crates/cosmix-logd/: Cargo.toml
crates/cosmix-logd/src/: main.rs
crates/cosmix-mail/: Cargo.toml  Dioxus.toml  index.html  input.css
crates/cosmix-mail/assets/: tailwind.css
crates/cosmix-mail/src/: hub.rs  jmap.rs  main.rs
crates/cosmix-mail/src/components/: compose.rs  email_list.rs  email_view.rs  icons.rs  mailbox_list.rs  mod.rs
crates/cosmix-mail/static/: mobile.css  sw.js
crates/cosmix-mcp/: Cargo.toml
crates/cosmix-mcp/src/: main.rs
crates/cosmix-mesh/: Cargo.toml
crates/cosmix-mesh/src/: lib.rs  node.rs  peer.rs  wg.rs
crates/cosmix-mon/: Cargo.toml
crates/cosmix-mon/src/: main.rs
crates/cosmix-port/: Cargo.toml
crates/cosmix-port/src/: amp.rs  lib.rs
crates/cosmix-settings/: Cargo.toml
crates/cosmix-settings/src/: main.rs
crates/cosmix-shell/: Cargo.toml
crates/cosmix-shell/src/: lib.rs  main.rs
crates/cosmix-ui/: Cargo.toml
crates/cosmix-ui/src/: canvas.rs  desktop.rs  icons.rs  lib.rs  markdown.rs  theme.rs  util.rs
crates/cosmix-view/: Cargo.toml
crates/cosmix-view/src/: main.rs  markdown.rs
crates/cosmix-web/: Cargo.toml
crates/cosmix-web/src/: main.rs
src/: Cargo.toml  _notes.md
src/_doc/: 2026-03-30-lua-to-mix-migration.md  2026-03-31-daemon-consolidation.md  2026-03-31-dioxus-ui-foundation.md  2026-03-31-dopus-arexx-deep-dive.md  2026-03-31-mix-cosmix-amp-enhancements.md  2026-04-03-claw-code-for-indexd.md  2026-04-03-clawhip-ideas-for-indexd.md  2026-04-03-cosmix-dialog-v010.md
src/_journal/: 2026-03-31.md  2026-04-03-indexd-resilience.md  2026-04-03-knowledge-augmented-claud.md  2026-04-03-mcp-skills-integration.md
src/crates/cosmix-claude/: Cargo.toml
src/crates/cosmix-claude/src/: main.rs
src/crates/cosmix-dialog/: Dioxus.toml  tailwind.css  test_dialogs.sh
src/crates/cosmix-dialog/assets/: tailwind.css
src/crates/cosmix-dialog/src/: cli.rs  lib.rs  main.rs
src/crates/cosmix-dialog/src/backend/: blocking.rs  dioxus_backend.rs  layer_backend.rs  mod.rs
src/crates/cosmix-dialog/src/layer/: theme.rs
src/crates/cosmix-dopus/: Cargo.toml
src/crates/cosmix-dopus/src/: main.rs
src/crates/cosmix-indexd/: Cargo.toml
src/crates/cosmix-indexd/src/: main.rs
src/crates/cosmix-lib-config/src/: settings.rs
src/crates/cosmix-lib-script/: Cargo.toml
src/crates/cosmix-lib-script/src/: dialog_ext.rs  discovery.rs  executor.rs  lib.rs  menu.rs  mix_runtime.rs  types.rs
src/crates/cosmix-lib-skills/: Cargo.toml
src/crates/cosmix-lib-skills/src/: cli.rs  indexd_client.rs  lib.rs  llm_client.rs  loop_fns.rs  prompts.rs  types.rs
src/crates/cosmix-lib-ui/src/: theme.rs
src/crates/cosmix-lib-ui/src/menu/: builder.rs
src/crates/cosmix-mcp/: Cargo.toml
src/crates/cosmix-mcp/src/: main.rs
src/crates/cosmix-noded/: Cargo.toml
src/crates/cosmix-noded/src/: config.rs  hub.rs  logger.rs  main.rs  monitor.rs
src/crates/cosmix-preview/src/: main.rs
src/crates/cosmix-scripts/: Cargo.toml
src/crates/cosmix-scripts/src/: main.rs
src/crates/cosmix-settings/src/: main.rs
(+21 files in other folders)
