[workspace]
resolver = "2"
members = [
    "crates/cosmix-jmap",
    "crates/cosmix-mail",
    "crates/cosmix-mesh",
    "crates/cosmix-port",
    "crates/cosmix-embed",
    "crates/cosmix-web",
    "crates/cosmix-view",
    "crates/cosmix-ui",
    "crates/cosmix-hub",
    "crates/cosmix-client",
]

[workspace.package]
edition = "2024"
license = "MIT"
repository = "https://github.com/markc/cosmixos"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
axum = { version = "0.8", features = ["ws"] }
tower-http = { version = "0.6", features = ["fs", "cors"] }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
base64 = "0.22"
bcrypt = "0.16"
blake3 = "1"
mimalloc = { version = "0.1", default-features = false }
libc = "0.2"
tokio-tungstenite = "0.26"
futures-util = "0.3"
wireguard-control = "1.7"
pulldown-cmark = { version = "0.12", default-features = false, features = ["html"] }
mail-builder = "0.4"
directories = "6"
toml_cfg = { package = "toml", version = "0.8" }
spamlite = { path = "../spamlite" }
rusqlite = { version = "0.32", features = ["bundled"] }
