[workspace]
resolver = "2"
members = [
    # Libraries
    "crates/cosmix-lib-amp",
    "crates/cosmix-lib-client",
    "crates/cosmix-lib-config",
    "crates/cosmix-lib-mesh",
    "crates/cosmix-lib-ui",
    "crates/cosmix-lib-daemon",
    "crates/cosmix-lib-script",
    "crates/cosmix-lib-skills",
    # GUI apps
    "crates/cosmix-backup",
    "crates/cosmix-dialog",
    "crates/cosmix-dialog-layer",
    "crates/cosmix-dialog-iced",
    "crates/cosmix-dns",
    "crates/cosmix-edit",
    "crates/cosmix-files",
    "crates/cosmix-mail",
    "crates/cosmix-menu",
    "crates/cosmix-mon",
    "crates/cosmix-scripts",
    "crates/cosmix-settings",
    "crates/cosmix-shell",
    "crates/cosmix-view",
    "crates/cosmix-wg",
    "crates/cosmix-dopus",
    "crates/cosmix-preview",
    # Daemons
    "crates/cosmix-noded",
    "crates/cosmix-indexd",
    "crates/cosmix-maild",
    "crates/cosmix-webd",
    "crates/cosmix-mcp",
    "crates/cosmix-claude",
]

[workspace.package]
edition = "2024"
license = "MIT"
repository = "https://github.com/markc/cosmix"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
anyhow = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
axum = { version = "0.8", features = ["ws"] }
tower-http = { version = "0.6", features = ["fs", "cors"] }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
base64 = "0.22"
bcrypt = "0.16"
blake3 = "1"
mimalloc = { version = "0.1", default-features = false }
libc = "0.2"
tokio-tungstenite = "0.26"
futures-util = "0.3"
wireguard-control = "1.7"
pulldown-cmark = { version = "0.12", default-features = false, features = ["html"] }
mail-builder = "0.4"
directories = "6"
toml_cfg = { package = "toml", version = "0.8" }
spamlite = { path = "../../.gh/spamlite" }
rusqlite = { version = "0.38", features = ["bundled"] }
notify = { version = "7", default-features = false, features = ["macos_fsevent"] }
dioxus-primitives = { git = "https://github.com/DioxusLabs/components", default-features = false, features = ["router"] }
lucide-dioxus = "2.577"

[profile.release]
strip = true
lto = true
codegen-units = 1
