[package]
name = "cosmix-client"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "AMP WebSocket client for cosmix apps to connect to cosmix-hub"

[dependencies]
cosmix-port = { path = "../cosmix-port" }
tokio.workspace = true
tokio-tungstenite.workspace = true
futures-util.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
anyhow.workspace = true
