[package]
name = "cosmix-dialog"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "GUI dialog utility for cosmix — info, error, confirm, input, text-info (stdin)"

[[bin]]
name = "cosmix-dialog"
path = "src/main.rs"

[features]
default = ["desktop"]
desktop = ["dioxus/desktop", "dep:dioxus-desktop", "dep:tao"]

[dependencies]
dioxus = { version = "0.7", features = [] }
dioxus-desktop = { version = "0.7", optional = true }
tao = { version = "0.34", default-features = false, optional = true }
cosmix_ui = { package = "cosmix-lib-ui", path = "../cosmix-lib-ui", features = ["config"] }
clap.workspace = true
mimalloc.workspace = true
