[package]
name = "cosmix-edit"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Text editor service for the cosmix appmesh"

[[bin]]
name = "cosmix-edit"
path = "src/main.rs"

[features]
default = ["desktop"]
desktop = ["dioxus/desktop", "dep:dioxus-desktop", "dep:tao"]

[dependencies]
dioxus = { version = "0.7", features = [] }
dioxus-desktop = { version = "0.7", optional = true }
tao = { version = "0.34", default-features = false, optional = true }
cosmix_ui = { package = "cosmix-lib-ui", path = "../cosmix-lib-ui", features = ["hub", "config"] }
mimalloc.workspace = true
cosmix_client = { package = "cosmix-lib-client", path = "../cosmix-lib-client" }
cosmix_config = { package = "cosmix-lib-config", path = "../cosmix-lib-config" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
rfd = "0.15"
