[package]
name = "cosmix-embed"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Lightweight text embedding + vector storage service using nomic-embed-text via candle"

[[bin]]
name = "cosmix-embed"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
libc.workspace = true
rusqlite = { workspace = true, features = ["bundled"] }
sqlite-vec = "0.1.8-alpha.1"
candle-core = { git = "https://github.com/huggingface/candle" }
candle-nn = { git = "https://github.com/huggingface/candle" }
candle-transformers = { git = "https://github.com/huggingface/candle" }
hf-hub = { version = "0.4", default-features = false, features = ["rustls-tls", "ureq"] }
tokenizers = { version = "0.21", default-features = false, features = ["onig"] }
