[package]
name = "cosmix-files"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "File browser and file service for the cosmix appmesh"

[[bin]]
name = "cosmix-files"
path = "src/main.rs"

[features]
default = ["desktop"]
desktop = ["dioxus/desktop", "dep:dioxus-desktop", "dep:tao"]

[dependencies]
dioxus = { version = "0.7", features = [] }
dioxus-desktop = { version = "0.7", optional = true }
tao = { version = "0.34", default-features = false, optional = true }
cosmix_ui = { package = "cosmix-lib-ui", path = "../cosmix-lib-ui", features = ["config"] }
cosmix_client = { package = "cosmix-lib-client", path = "../cosmix-lib-client" }
cosmix_config = { package = "cosmix-lib-config", path = "../cosmix-lib-config" }
mimalloc.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
chrono.workspace = true
