[package]
name = "cosmix-hub"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Local WebSocket message broker for the cosmix appmesh"

[[bin]]
name = "cosmix-hub"
path = "src/main.rs"

[dependencies]
cosmix-port = { path = "../cosmix-port" }
tokio.workspace = true
axum.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
mimalloc = { workspace = true }
futures-util.workspace = true
clap.workspace = true
