[package]
name = "cosmix-jmap"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "cosmix-jmap"
path = "src/main.rs"

[dependencies]
cosmix-port = { path = "../cosmix-port" }
axum.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
uuid.workspace = true
chrono.workspace = true
clap = { version = "4", features = ["derive"] }
blake3 = "1"
toml_cfg.workspace = true
tower-http.workspace = true
directories.workspace = true
smtp-proto = "0.2"
mail-parser = "0.11"
mail-builder = "0.4"
mail-auth = "0.7"
mail-send = "0.5"
hickory-resolver = { version = "0.25", features = ["tokio", "system-config"] }
tokio-rustls = "0.26"
rustls = { version = "0.23", features = ["ring"] }
rustls-pemfile = "2"
base64 = "0.22"
bcrypt = "0.16"
mimalloc.workspace = true
spamlite.workspace = true
rusqlite.workspace = true
webpki-roots = "0.26"
hyper-util = { version = "0.1", features = ["tokio", "server-auto", "service"] }
hyper = { version = "1", features = ["server"] }
