[package]
name = "cosmix-lib-ui"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Shared Dioxus components, icons, theme, and utilities for cosmix apps"

[lib]
name = "cosmix_ui"
path = "src/lib.rs"

[features]
default = ["desktop"]
desktop = ["dep:dioxus-desktop", "dep:tao", "dep:rfd"]
web = []
config = ["dep:cosmix_config"]
hub = ["dep:cosmix_client", "dep:serde_json"]

[dependencies]
dioxus = { version = "0.7", features = [] }
dioxus-desktop = { version = "0.7", optional = true }
tao = { version = "0.34", default-features = false, optional = true }
rfd = { version = "0.15", optional = true }
cosmix_client = { package = "cosmix-lib-client", path = "../cosmix-lib-client", optional = true, default-features = false }
cosmix_config = { package = "cosmix-lib-config", path = "../cosmix-lib-config", optional = true }
serde_json = { workspace = true, optional = true }
tracing = { workspace = true }
pulldown-cmark = { workspace = true }
base64 = { workspace = true }
