[package]
name = "cosmix-logd"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "AMP traffic logger daemon — taps the hub and writes to ~/.local/log/cosmix/amp.log"

[[bin]]
name = "cosmix-logd"
path = "src/main.rs"

[dependencies]
cosmix_daemon = { package = "cosmix-lib-daemon", path = "../cosmix-lib-daemon" }
cosmix_client = { package = "cosmix-lib-client", path = "../cosmix-lib-client" }
cosmix_amp = { package = "cosmix-lib-amp", path = "../cosmix-lib-amp" }
mimalloc.workspace = true
tokio.workspace = true
tracing.workspace = true
serde_json.workspace = true
chrono.workspace = true
