[package]
name = "cosmix-mcp"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "MCP server bridging Claude Code to the cosmix appmesh"

[[bin]]
name = "cosmix-mcp"
path = "src/main.rs"

[dependencies]
rmcp = { version = "1", features = ["server", "transport-io", "macros"] }
cosmix_client = { package = "cosmix-lib-client", path = "../cosmix-lib-client" }
serde_json.workspace = true
serde.workspace = true
schemars = "1"
tokio.workspace = true
tracing.workspace = true
