[package]
name = "cosmix-mesh"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "AMP mesh networking — WireGuard overlay + WebSocket peer sync"

[lib]
name = "cosmix_mesh"
path = "src/lib.rs"

[dependencies]
cosmix-port = { path = "../cosmix-port" }
tokio.workspace = true
tokio-tungstenite.workspace = true
futures-util.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
anyhow.workspace = true
uuid.workspace = true
sqlx.workspace = true
wireguard-control.workspace = true
