[package]
name = "cosmix-mon"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "System monitor GUI — queries cosmix-mond via hub, desktop + WASM dual-target"

[[bin]]
name = "cosmix-mon"
path = "src/main.rs"

[features]
default = ["desktop"]
desktop = ["dioxus/desktop", "dep:dioxus-desktop", "dep:tao", "cosmix_ui/desktop"]
web = ["dioxus/web"]

[dependencies]
dioxus = { version = "0.7", features = [] }
dioxus-desktop = { version = "0.7", optional = true }
tao = { version = "0.34", default-features = false, optional = true }
cosmix_ui = { package = "cosmix-lib-ui", path = "../cosmix-lib-ui", default-features = false, features = ["config"] }
mimalloc.workspace = true
cosmix_client = { package = "cosmix-lib-client", path = "../cosmix-lib-client" }
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
cosmix_config = { package = "cosmix-lib-config", path = "../cosmix-lib-config" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.3", features = ["wasm_js"] }
gloo-timers = { version = "0.3", features = ["futures"] }
