[package]
name = "cosmix-port"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Layer 3 port library for COSMIC apps — register commands, expose via Unix socket"

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tracing.workspace = true
libc.workspace = true
