[package]
name = "cosmix-settings"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "GUI settings editor — Dioxus app for visually editing cosmix settings"

[[bin]]
name = "cosmix-settings"
path = "src/main.rs"

[features]
default = ["desktop"]
desktop = ["dioxus/desktop", "dep:dioxus-desktop", "dep:tao", "cosmix_ui/desktop"]

[dependencies]
cosmix_config = { package = "cosmix-lib-config", path = "../cosmix-lib-config" }
cosmix_ui = { package = "cosmix-lib-ui", path = "../cosmix-lib-ui", default-features = false, features = ["config"] }
dioxus = "0.7"
dioxus-desktop = { version = "0.7", optional = true }
tao = { version = "0.33", optional = true }
serde.workspace = true
serde_json.workspace = true
mimalloc.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio.workspace = true
