[package]
name = "cosmix-view"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "GFM markdown viewer and image viewer — Dioxus desktop"

[[bin]]
name = "cosmix-view"
path = "src/main.rs"

[features]
default = ["desktop"]
desktop = ["dioxus/desktop", "dep:dioxus-desktop", "dep:tao"]

[dependencies]
dioxus = { version = "0.7", features = [] }
dioxus-desktop = { version = "0.7", optional = true }
tao = { version = "0.34", default-features = false, optional = true }
cosmix-ui = { path = "../cosmix-ui" }
pulldown-cmark = { workspace = true }
base64 = { workspace = true }
layout-rs = "0.1"
rfd = "0.15"
