[package]
name = "cosmix-dopus"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Dual-pane file manager inspired by Directory Opus 4"

[[bin]]
name = "cosmix-dopus"
path = "src/main.rs"

[features]
default = ["desktop"]
desktop = ["dioxus/desktop", "dep:dioxus-desktop", "dep:tao"]

[dependencies]
dioxus = { version = "0.7", features = [] }
dioxus-desktop = { version = "0.7", optional = true }
tao = { version = "0.34", default-features = false, optional = true }
cosmix_ui = { package = "cosmix-lib-ui", path = "../cosmix-lib-ui", features = ["config", "hub"] }
cosmix_client = { package = "cosmix-lib-client", path = "../cosmix-lib-client" }
mimalloc.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
chrono.workspace = true
