[package]
name = "cosmix-lib-script"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "ARexx-style scripting: Mix runtime bridge, script discovery, and menu generation"

[lib]
name = "cosmix_script"
path = "src/lib.rs"

[features]
default = []
menu = ["dep:cosmix_ui"]
dialog = ["dep:cosmix_dialog"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
cosmix_client = { package = "cosmix-lib-client", path = "../cosmix-lib-client" }
cosmix_ui = { package = "cosmix-lib-ui", path = "../cosmix-lib-ui", optional = true, default-features = false }
cosmix_dialog = { package = "cosmix-dialog", path = "../cosmix-dialog", optional = true, default-features = false, features = ["layer-shell"] }
mix-core = { path = "../../../../.mix/src/crates/mix-core", features = ["json"] }
indexmap = "2"
tokio = { workspace = true }
