[package]
name = "cosmix-lib-skills"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Hermes-style skill learning loop: evaluate, extract, retrieve, refine"

[lib]
name = "cosmix_skills"
path = "src/lib.rs"

[[bin]]
name = "cosmix-skills-cli"
path = "src/cli.rs"

[dependencies]
cosmix_config = { package = "cosmix-lib-config", path = "../cosmix-lib-config" }
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
chrono.workspace = true
clap.workspace = true
reqwest.workspace = true
tracing-subscriber.workspace = true
