[package]
name = "cosmix-noded"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Consolidated cosmix node daemon — hub + config + monitor + logger"

[[bin]]
name = "cosmix-noded"
path = "src/main.rs"

[dependencies]
# Hub
cosmix_amp = { package = "cosmix-lib-amp", path = "../cosmix-lib-amp" }
cosmix_mesh = { package = "cosmix-lib-mesh", path = "../cosmix-lib-mesh" }
axum.workspace = true
futures-util.workspace = true

# Config
cosmix_config = { package = "cosmix-lib-config", path = "../cosmix-lib-config" }
notify.workspace = true

# Monitor
sysinfo = "0.35"

# Logger
chrono.workspace = true

# Shared — client modules connect to hub via WebSocket
cosmix_client = { package = "cosmix-lib-client", path = "../cosmix-lib-client" }
cosmix_daemon = { package = "cosmix-lib-daemon", path = "../cosmix-lib-daemon" }

# Common
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
anyhow.workspace = true
clap.workspace = true
mimalloc.workspace = true
